# dsg-persistence/src/main/java/com/ringcentral/dsg/persistence/model/DeprovisioningRuleRecord.java
@@ -1,0 +1,3 @@
+package com.ringcentral.dsg.persistence.model;
+
+public record DeprovisioningRuleRecord(String deprovisioningType) {}
